--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "NODE_ENV=development tsx watch ./src/index.ts",
     "format": "prettier --write .",
     "test": "vitest",
-    "start": "NODE_ENV=production node ./dist/index.js"
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "db:generate": "pnpm drizzle-kit generate",
+    "db:migrate": "pnpm drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +21,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.6.0",
+    "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
+    "drizzle-kit": "^0.31.5",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
@@ -30,7 +34,9 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "pg": "^8.16.3",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
     "supertest": "^7.1.4",
