Reorganize authentication and image handling logic into services (#10)

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ NODE_ENV="development"
 BETTER_STACK_SOURCE_TOKEN=""
 BETTER_STACK_ENDPOINT=""
 REFRESH_TOKEN_SECRET=""
+REFRESH_TOKEN_EXPIRY=""
 ACCESS_TOKEN_SECRET=""
+ACCESS_TOKEN_EXPIRY=""
 DATABASE_URL=""
 AWS_ACCESS_KEY=""
 AWS_SECRET_ACCESS_KEY=""
