chore: update log level and use consistent status codes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV="development"
+LOG_LEVEL="info"
 BETTER_STACK_SOURCE_TOKEN=""
 BETTER_STACK_ENDPOINT=""
 REFRESH_TOKEN_SECRET=""
